deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webgame-collection
  namespace: webgame-collection
spec:
  type: NodePort
  selector:
    app: webgame-collection
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
